# dwelling

./: .env  Cargo.toml  LICENSE.md  README.md
dev/: docker-compose.yaml
sql/: 20251005__Initial.sql
src/: config.rs  database.rs  hello.rs  main.rs  model.rs  observability.rs  thread.rs
templates/: error.hbs  index.hbs  not_found.html
